2006-08-22  Thomas Moschny  <thomas.moschny@gmx.de>

	* contrib/monotone.zsh_completion: Extended filename completion to
	subdirs, minor cleanups.
	(_mtn_files): New function, factored out filename completion.
	(_mtn_rcwd): New function, determines cwd relative to wd.

2006-08-22  Nathaniel Smith  <njs@pobox.com>

	* cmd_ws_commit.cc (checkout): Allow user to pass -r without
	either -b or a directory (as per bug #17498).
	* tests/checkout_-r_no_dir/: New test.

2006-08-22  Nathaniel Smith  <njs@pobox.com>

	* cmd_ws_commit.cc (checkout): Improve error messages.

2006-08-22  Nathaniel Smith  <njs@pobox.com>

	* sanity.hh (sanity): Move 'brief' from here...
	* app_state.cc (app_state): ...to here, with the rest of the
	options.
	* monotone.cc, cmd_diff_log.cc: Adjust accordingly.
	* cmd_files.cc (annotate): 
	* annotate.cc (do_annotate): Take the brief option from outside,
	instead of accessing the global from deep in the middle of
	annotate.
	
	No behavioral changes in this commit.
	
2006-08-22  Nathaniel Smith  <njs@pobox.com>

	* sanity.cc: Remove tabs.

2006-08-22  Nathaniel Smith  <njs@pobox.com>

	* annotate.cc: Remove tabs.

2006-08-22  Nathaniel Smith  <njs@pobox.com>

	* restrictions.cc (includes): Don't log what's going on when we
	have a totally unrestricted mask; it's taking several percent of
	cpu time.

2006-08-22  Richard Levitte  <richard@levitte.org>

	* examples/display_branches.lua (netsync_branches): Change it
	so internal calls to other hooks are done to private versions.
	This is so we don't mess with other implementations of the same
	hooks which may be simultaneously present.

2006-08-21  Matt Johnston  <matt@ucc.asn.au>

	* debian/control: add libboost-program-options-dev to build dependencies

2006-08-20  Nathaniel Smith  <njs@pobox.com>

	* Makefile.am (EXTRA_DIST): Remove a trailing comma to get a
	non-mangled directory layout for tester-tests/ in the distribution
	tarball.

2006-08-20  Nathaniel Smith  <njs@pobox.com>
