@@ -151,7 +151,7 @@ CMD(annotate, N_("informative"), N_("PATH"),
 
   file_t file_node = downcast_to_file_t(node);
   L(FL("annotate for file_id %s") % file_node->self);
-  do_annotate(app, file_node, rid, !app.brief);
+  do_annotate(app, file_node, rid, app.brief);
 }
 
 CMD(identify, N_("debug"), N_("[PATH]"),
