@@ -3,4 +3,4 @@ mtn_setup()
 
 addfile("testfile", "blah blah")
 
-check(mtn("annotate", "testfile"), 1, false, false)
+check(mtn("annotate", "--brief", "testfile"), 1, false, false)
