@@ -668,3 +668,4 @@ table.insert(tests, "log_with_restriction")
 table.insert(tests, "log_quits_on_SIGPIPE")
 table.insert(tests, "drop_directory_with_unversioned_files_and_merge")
 table.insert(tests, "checkout_-r_no_dir")
+table.insert(tests, "annotate_with_human_output")
